# embedded-rust-book

./: Cargo.toml  README.md
src/02-qemu/: Cargo.toml  memory.x  openocd-f3.gdb  openocd.gdb
src/02-qemu/.cargo/: config
src/02-qemu/examples/: gpio.rs  typestate.rs
src/02-qemu/src/: main.rs
src/dht11-stm32f3/: Cargo.toml  openocd.gdb
src/dht11-stm32f3/.cargo/: config
src/dht11-stm32f3/src/: main.rs
src/uart-take-2/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
src/uart-take-2/src/: main.rs
